[gd_scene load_steps=3 format=3 uid="uid://dsewa7aepcigx"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_a4iuv"]
[ext_resource type="FontFile" uid="uid://hgiv517ope7p" path="res://fonts/PressStart2P-Regular.ttf" id="1_v5eor"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_a4iuv")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 640.0
color = Color(0.192157, 0.376471, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1152.0
offset_bottom = 640.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="title_label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_v5eor")
theme_override_font_sizes/font_size = 49
text = "Title here"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="key_helper_label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_v5eor")
theme_override_font_sizes/font_size = 24
text = "Press space / start to add players"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Player_count_label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_v5eor")
theme_override_font_sizes/font_size = 49
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Players_label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_v5eor")
theme_override_font_sizes/font_size = 49
text = "humans"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="And_label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_v5eor")
theme_override_font_sizes/font_size = 49
text = "and"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Ai_count_label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_v5eor")
theme_override_font_sizes/font_size = 49
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="computer_label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_v5eor")
theme_override_font_sizes/font_size = 49
text = "computer"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="AI_modify_label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_v5eor")
theme_override_font_sizes/font_size = 49
text = "AI"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="increase_ai_count_button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_right = NodePath("../decrease_ai_count_button")
focus_neighbor_bottom = NodePath("../../new_game_button")
theme_override_fonts/font = ExtResource("1_v5eor")
theme_override_font_sizes/font_size = 100
text = "+"

[node name="decrease_ai_count_button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../increase_ai_count_button")
focus_neighbor_bottom = NodePath("../../new_game_button")
theme_override_fonts/font = ExtResource("1_v5eor")
theme_override_font_sizes/font_size = 100
text = "-"

[node name="new_game_button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../VBoxContainer2/increase_ai_count_button")
shortcut_context = NodePath("../../../..")
theme_override_fonts/font = ExtResource("1_v5eor")
theme_override_font_sizes/font_size = 55
disabled = true
text = "New Game"

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/increase_ai_count_button" to="." method="_on_increase_ai_count_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/decrease_ai_count_button" to="." method="_on_decrease_ai_count_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/new_game_button" to="." method="_on_new_game_button_pressed"]
